Add the per-capita report.